# TextMe

./: CMakeLists.txt  ContactPage.qml  ConversationPage.qml  LoginPage.qml  README.md  TextMe.qmlproject  TextMe.qmlproject.qtds  database.sqlite3  main.qml  qmlmodules  qtquickcontrols2.conf  sqlcontactmodel.cpp  sqlcontactmodel.h  sqlconversationmodel.cpp  sqlconversationmodel.h  sqlloginmodel.cpp  sqlloginmodel.h
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/TextMe/: CMakeLists.txt  qmldir
imports/TextMe/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
